# libiomgr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/tcp/: client.cc  server.cc
include/iomgr/: callback.h  export.h  io_buffer.h  io_watcher.h  ref_counted.h  slice.h  status.h  statusor.h  time.h  timer.h
include/iomgr/http/: http_client.h  http_request.h  http_response.h  http_server.h  http_types.h  uri_parser.h
include/iomgr/tcp/: inet_address.h  tcp_client.h  tcp_server.h
io/: http_client.cc  http_request.cc  http_request_test.cc  http_response.cc  http_response_test.cc  http_server.cc  http_server_test.cc  io_buffer.cc  io_manager.cc  io_manager.h  io_manager_test.cc  io_poller.cc  io_poller.h  io_poller_test.cc  io_watcher.cc  io_watcher_test.cc  tcp_client_impl.cc  tcp_client_impl.h  tcp_client_impl_test.cc  tcp_server_impl.cc  tcp_server_impl.h  tcp_server_impl_test.cc
io/test/: async_test_callback.h
threading/: task_handle.cc  task_handle.h  task_runner.cc  task_runner.h  task_runner_task.cc  task_runner_task.h  task_runner_test.cc  thread.cc  thread.h  thread_test.cc
timer/: time.cc  time_test.cc  timer.cc  timer_heap.cc  timer_heap.h  timer_heap_test.cc  timer_manager.cc  timer_manager.h  timer_manager_test.cc
timer/test/: timer_test.h
util/: averaged_stats.cc  averaged_stats.h  averaged_stats_test.cc  file_op.cc  file_op.h  file_op_test.cc  http_parser.cc  http_parser.h  http_parser_test.cc  inet_address.cc  notification.cc  notification.h  notification_test.cc  os_error.cc  os_error.h  pointer_hash.h  ref_counted_test.cc  scoped_fd.h  scoped_fd_test.cc  sockaddr_storage.cc  sockaddr_storage.h  sockaddr_storage_test.cc  socket_op.cc  socket_op.h  status.cc  status_test.cc  statusor_test.cc  sync.h  uri_parser.cc  uri_parser_test.cc
